src/test/deca/context/valid/created/null-object.deca
//Description :
// Test d'un objet null
//
// Resultats :
// 

class A {
    int a = 3;
}

{
    A obj = null;
}