src/test/deca/context/invalid/created/object_class4.deca
//Description :
//attribut meme nom
//
// Resultats :
// Erreur

class A{
int a = 3;
protected float a = 3;
}
